# vk-tut-reimp

./: .gitignore  CMakeLists.txt  Readme.md  cmake.sh  compileShader.sh  debugCmake.sh  gdDebug.sh  runTest.sh
glslShaders/: shader.vert
include/: BaseRenderer.hh  ImageRenderer.hh  Macros.hh  RenderAssets.hh  Structs.hh  Utils.hh  VertexRenderer.hh  VkUtils.hh  VulkanInstance.hh  Window.hh  render.hh  renderer.hh  utils.hh  window.hh
lib/: BaseRenderer.cc  RenderAssets.cc  Structs.cc  Utils.cc  VertexRenderer.cc  VkUtils.cc  VulkanInstance.cc  Window.cc  render.cc  renderer.cc  utils.cc  window.cc
src/: app.cc  app.hh  main.cc
